Finish Documentation and Endpoints
